--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,3 +92,11 @@ span.input-group-addon i {
 }
 
 // End of Form
+
+.center-div {
+    margin: 0 auto;
+}
+
+.player-select-dropdown {
+    font-size: 22px;
+}
