--- a/partials/main.html
+++ b/partials/main.html
@@ -5,7 +5,8 @@
 <div ng-show="$parent.dataCache.playerData" class="container" ng-init="init()" ng-controller="HomeCtrl">
 
     <form>
-        <div class="form-group">
+        <div class="form-inline">
+            <h2>Leaderboard</h2>
             <div class="input-group">
             <div class="input-group-addon"><i class="fa fa-search"></i></div>
             <input type="text" class="form-control" placeholder="Search" ng-model="searchPlayer">
