Styled some way more stuff. So close to demo day

--- a/partials/new-player-form.html
+++ b/partials/new-player-form.html
@@ -1,9 +1,8 @@
 <div ng-init="init()">
-    <h1>Create a New Player</h1>
 
     <div class="row main">
         <div class="main-login main-center">
-        <h5>Player Details</h5>
+        <h2>Create New Player</h2>
             <form class="" method="post" action="#">
                 <div class="form-group">
                     <label for="name" class="cols-sm-2 control-label">Name</label>
