--- a/partials/game-report.html
+++ b/partials/game-report.html
@@ -1,6 +1,7 @@
 <div class="container" ng-init="init()" ng-controller="GameReportCtrl">
     <div class="row">
         <div class="col-sm-8 col-md-4">
+        <h1>Report a Game</h1>
             <button ng-click="
             showTwoPlayerGameForm = true;
             showFourPlayerGameForm = false;
